# WikipediaSpeedrun

./: .gitignore  CMakeLists.txt  README.md  mingw-w64-x86_64.cmake  release.sh  run.sh
include/: Constants.hpp  Extract.hpp  Find.hpp  UI.hpp  Worker.hpp
src/: Extract.cpp  Find.cpp  UI.cpp  Worker.cpp  main.cpp
